# glyph-kg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  METRICS-code-global.md  METRICS-code-qwen.md  METRICS-code.md  METRICS.md  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
.specs/features/13-ruff-s-blocking-ci/: validation.md
.specs/features/issue-11-pre-commit-config/: validation.md
.specs/features/issue-12-ruff-security-lint/: validation.md
.specs/features/issue-14-pip-audit/: validation.md
.specs/features/issue-15-gitleaks-full-history/: validation.md
.specs/features/issue-16-hypothesis-extraction-retrieval/: validation.md
.specs/features/issue-19-attack-vs-resistance-confusion/: validation.md
.specs/features/issue-20-declare-retrieval-asymmetries/: validation.md
.specs/features/issue-21-attrs-in-segments-experiment/: validation.md
.specs/features/issue-22-real-tokenizer/: validation.md
.specs/features/issue-41-reranked-benchmark/: validation.md
docs/: ARCHITECTURE.md  GLYPH_PLAN.md  KICKOFF.md  article.md  axon-integration.md  portfolio.md
docs/ci/: benchmark.yml
docs/decisions/: dec-g1-extractor-port-and-backend.md  dec-g2-document-extraction-schema.md  dec-g3-fair-vector-baseline.md  dec-g4-eval-methodology.md  dec-g5-code-symbol-resolution.md  dec-g6-graph-context-source-boundary.md  dec-g7-global-community-axis.md  dec-g8-gnomon-as-eval-engine.md  p7-global-community-spec.md  phase1-cost-gate-results.md  phase3-attrs-in-segments.md  phase3-p3.5-attack-vs-resistance.md  phase3-quality-backlog.md
docs/superpowers/plans/: 2026-06-09-phase1-document-extraction.md  2026-06-10-phase2-retrieval-baseline.md  2026-06-30-glyph-retrieval-insertion.md  (+1 more)
eval/: README.md  benchmark-baseline.json  code-benchmark-baseline.json  code-benchmark-qwen.json  code-global-baseline.json  code-global-queries.json  code-global-qwen.json  code-queries-semantic.json  code-queries.json  queries.json
glyph/: __init__.py  vault.py
glyph/baseline/: __init__.py  vector.py
glyph/embed/: __init__.py  memory_index.py  port.py  sentence_transformers_embedder.py
glyph/eval/: __init__.py  code_corpus.py  cost.py  dataset.py  generate.py  harness.py  judge.py  recall.py  report.py  response.py  target.py
glyph/extract/: __init__.py  port.py  spec_parser.py
glyph/integration/: __init__.py  context_source.py
glyph/model/: __init__.py  contract.py  edge.py  graph.py  node.py
glyph/retrieval/: __init__.py  community.py  graph.py  hybrid.py  multi_anchor.py  path.py  port.py  reranked.py  reranker.py
glyph/store/: __init__.py  neo4j_store.py  networkx_store.py  port.py
scripts/: attrs_recall_experiment.py  build_code_query_set.py  build_communities.py  build_query_set.py  build_vault.py  extract_book.py  extract_code.py  retrieve_demo.py  run_benchmark.py
tests/: test_build_vault.py  test_gitleaks_ci.py  test_pip_audit_ci.py  test_pre_commit_config.py  test_public_api.py  test_ruff_s_ci_contract.py  test_spec_parser.py
tests/architecture/: test_dependencies.py
tests/baseline/: test_vector.py
tests/embed/: test_memory_index.py  test_sentence_transformers_embedder.py
tests/eval/: test_code_corpus.py  test_confusion_rate.py  test_cost.py  test_dataset.py  test_generate.py  test_harness.py  test_judge.py  test_judge_security.py  test_query_set.py  test_recall.py  test_report.py  test_response.py  test_target.py
tests/extract/: test_port.py
tests/integration/: test_context_source.py
tests/model/: test_contract.py  test_edge.py  test_graph.py  test_node.py  test_tokenizer.py
tests/retrieval/: test_community.py  test_graph.py  test_graph_attrs.py  test_hybrid.py  test_multi_anchor_properties.py  test_multi_anchor_retriever.py  test_pagerank_graph.py  test_path_retriever.py  test_reranker.py
tests/scripts/: test_build_query_set.py  test_run_benchmark_wiring.py
tests/store/: conftest.py  test_networkx_store.py  test_port.py  test_store_contract.py
(+34 files in other folders)
