[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyph-kg"
version = "0.0.0"
description = "Knowledge graph library for documents and code, with graph-aware retrieval benchmarked against vector search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sammyjdev" }]
keywords = ["knowledge-graph", "retrieval", "graphrag", "networkx", "neo4j"]
dependencies = [
    "pydantic>=2.6",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
document = [
    "pymupdf>=1.24",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/sammyjdev/glyph-kg"

[tool.hatch.build.targets.wheel]
packages = ["glyph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fitz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:asyncio --import-mode=importlib -m \"not live\" --cov=glyph --cov-report=term-missing --cov-fail-under=90"
markers = [
    "live: hits the live Anthropic API (requires ANTHROPIC_API_KEY); deselected by default",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore::DeprecationWarning:sys",
]

[tool.coverage.run]
branch = true
source = ["glyph"]
